--- a/styles/gridstarter.css
+++ b/styles/gridstarter.css
@@ -1,13 +1,14 @@
 
 body {
 	background-image: radial-gradient(circle, dodgerblue, royalblue);
+   
 }
 h1 {
 	color: #f5f5f5;
 	text-align: center;
-	font-size: 40px;
+	font-size: 30px;
 	background-color: rgba(0,0,0,0.15);
-	padding: 15px 0;
+	padding: 10px 0;
 	margin: 10px 0 30px;
 }
 h2 {
@@ -47,33 +48,38 @@ ul > li {
 article {
 
 	margin: 0 auto;
-   display:flex;
+   
+   
 }
 
 section {
 
-	width: 250px;
+	width: auto;
 	height: 450px;
-	padding: 30px 20px;
-	margin: 20px 10px;
-	border: 5px solid #409fff;
+	border: 1px solid #409fff;
 	background-color: #f5f5f5;
 	box-shadow: 0 30px 40px -20px rgba(0,0,0,0.3);
-    flex:1;
+    flex: 1;
+    text-align: center;
+    
+    
+    
 }
 
 section.wide {
 	
 	height: auto;
 	text-align: center;
+ 
+   
 }
 
 section.wide h2{
-	width: 300px;
+	width: 100%;
 }
 
 section h2 {
-	position: absolute;
+	position: relative;
 	height: 48px;
 	line-height: 38px;
 	width: 100%;
@@ -83,29 +89,36 @@ section h2 {
 	padding: 0;
 	transform: translateX(-50%);
 	background-color: #f5f5f5;
-	border: 5px solid #409fff;
+	border: 1px solid #409fff;
 	text-align: center;
 }
 
-span {
-	border: 2px dotted sandybrown;
-	height: 100px;
-	color: #222;
-	background-color: white;
-}
+
 
 figure {
 	background-color: sandybrown;
 	height: 80px;
-	width: 250px;
+	width: auto;
 	padding: 0;
-	margin: 4px 0;
+	margin: 1px 0;
 	color: white;
 	line-height: 100px;
 	text-align: center;
+    
 }
 
 /* Set Display Types */
+.container {
+    display:grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto;
+    grid-row-gap: 10px;
+   
+   
+ 
+    
+    
+}
 
 
 
